--- a/style.css
+++ b/style.css
@@ -123,4 +123,20 @@ footer { background:#0077b6; color:#fff; text-align:center; padding:20px; border
   0% { background-position: 0% 50%; }
   50% { background-position: 100% 50%; }
   100% { background-position: 0% 50%; }
+  }  border-radius: 50px;
+  cursor: pointer;
+  text-decoration: none;
+  box-shadow: 0 0 20px rgba(0,0,0,0.3), 0 0 25px #00bfff;
+  transition: all 0.4s ease;
+  animation: gradientShift 6s ease infinite;
+}
+.big-btn:hover {
+  transform: translateY(-4px) scale(1.05);
+  box-shadow: 0 0 25px #00eaff, 0 0 50px #e1306c;
+}
+
+@keyframes gradientShift {
+  0% { background-position: 0% 50%; }
+  50% { background-position: 100% 50%; }
+  100% { background-position: 0% 50%; }
 }
